@startuml
'https://plantuml.com/class-diagram

interface IDuck
class BasicDuck
class ElectronicDuck
class Pool

interface IDuck{
+ quack() : void
+swim() : void
}

class BasicDuck{
+ quack() : void
+ swim() : void
}

class ElectronicDuck{
- _on : boolean
+ quack() : void
+ swim() : void
+ turnOn() : void
+ turnOff() : void
}

class Pool{
+ run() : void
+ quack() : void
+ swim() : void
}

IDuck <|.. BasicDuck
IDuck <|.. ElectronicDuck

Pool ..> IDuck
@enduml